[project]
name = "process-template"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "automation-server-client",
    "kmd-nexus-client",
    "odk-tools",
]

[tool.uv.sources]
automation-server-client = { git = "https://github.com/odense-rpa/automation-server-client.git" }
kmd-nexus-client = { git = "https://github.com/odense-rpa/nexus-client.git" }
odk-tools = { git = "https://github.com/odense-rpa/odk-tools.git" }
