[project]
name = "slutlister_sygepleje"
version = "0.1.0"
description = "Gennemgang af borgers kalender for at vurdere om specikke indsatser stadig have begivenheder i kalenderen. Lukker indsatsen hvis der ikke er nogen indsatser. Myndighed får opgave hvis borger er helt færdig med sygepleje"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "automation-server-client",
    "kmd-nexus-client",
    "odk-tools",
]

[tool.uv.sources]
kmd-nexus-client = { git = "https://github.com/odense-rpa/nexus-client.git" }
odk-tools = { git = "https://github.com/odense-rpa/odk-tools.git" }
automation-server-client = { git = "https://github.com/odense-rpa/automation-server-client.git", tag = "v0.1.0" }
